[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Planet/Planet.gd" type="Script" id=2]
[ext_resource path="res://Food/Food.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Interface.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hole/Hole.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 362.382, 127.711, 0, 0, 0, 0, 373.702, 128.75, 0, 0, 0, 0, 383.546, 132.588, 0, 0, 0, 0, 392.056, 139.763, 0, 0, 0, 0, 399.564, 151.442, 0, 0, 0, 0, 403.235, 163.957, 0, 0, 0, 0, 402.296, 173.725, 0, 0, 0, 0, 398.23, 186.649, 0, 0, 0, 0, 391.722, 197.494, 0, 0, 0, 0, 382.545, 203.334, 0, 0, 0, 0, 371.201, 207.716, 0, 0, 0, 0, 359.519, 207.839, 0, 0, 0, 0, 347.339, 205.337, 0, 0, 0, 0, 334.991, 197.161, 0, 0, 0, 0, 323.954, 180.628, 0, 0, 0, 0, 321.643, 166.626, 0, 0, 0, 0, 324.646, 151.943, 0, 0, 0, 0, 331.821, 142.099, 0, 0, 0, 0, 340.498, 133.255, 0, 0, 0, 0, 347.672, 129.584, 0, 0, 0, 0, 363.633, 126.961 )
}

[node name="Planet" type="Node2D"]
position = Vector2( 3.05176e-05, 1.49831 )
script = ExtResource( 2 )
Enemy = ExtResource( 4 )

[node name="Hole" parent="." instance=ExtResource( 6 )]
position = Vector2( -96.8125, 237.736 )

[node name="Hole2" parent="." instance=ExtResource( 6 )]
position = Vector2( 227.122, -122.269 )

[node name="Hole3" parent="." instance=ExtResource( 6 )]
position = Vector2( 528.902, -23.9729 )

[node name="EnemyTime" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 512, 300 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 257.382, 291.129 )

[node name="Interface" parent="." instance=ExtResource( 5 )]

[node name="Food" parent="." instance=ExtResource( 3 )]
position = Vector2( 245.36, 103.083 )

[node name="Food2" parent="." instance=ExtResource( 3 )]
position = Vector2( 245.36, 103.083 )
collision_layer = 2147483649

[node name="Food3" parent="." instance=ExtResource( 3 )]
position = Vector2( 245.36, 103.083 )
collision_layer = 2147483649

[node name="Food4" parent="." instance=ExtResource( 3 )]
position = Vector2( 245.36, 103.083 )

[node name="Food5" parent="." instance=ExtResource( 3 )]
position = Vector2( 245.36, 103.083 )

[node name="TriangleRoad" type="Path2D" parent="."]
position = Vector2( 171.827, -15.5564 )
curve = SubResource( 1 )

[node name="MoveOnRoad" type="PathFollow2D" parent="TriangleRoad"]
position = Vector2( 362.382, 127.711 )
rotation = 0.0915333

[node name="TriangleRoad2" type="Path2D" parent="."]
position = Vector2( -151.492, 344.36 )
curve = SubResource( 1 )

[node name="MoveOnRoad" type="PathFollow2D" parent="TriangleRoad2"]
position = Vector2( 362.382, 127.711 )
rotation = 0.0915333

[node name="TriangleRoad3" type="Path2D" parent="."]
position = Vector2( 469.16, 78.3349 )
scale = Vector2( 1.01636, 1.02053 )
curve = SubResource( 1 )

[node name="MoveOnRoad" type="PathFollow2D" parent="TriangleRoad3"]
position = Vector2( 362.382, 127.711 )
rotation = 0.0915333

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="EnemyTime" to="." method="_on_EnemyTime_timeout"]
[connection signal="timeout" from="StartTime" to="." method="_on_StartTime_timeout"]
[connection signal="lost" from="Player" to="." method="gameOver"]
[connection signal="startGame" from="Interface" to="." method="newGame"]
[connection signal="eated" from="Food" to="." method="_on_Food_eated"]
[connection signal="eated" from="Food2" to="." method="_on_Food_eated"]
[connection signal="eated" from="Food3" to="." method="_on_Food_eated"]
[connection signal="eated" from="Food4" to="." method="_on_Food_eated"]
[connection signal="eated" from="Food5" to="." method="_on_Food_eated"]
